<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:background="@android:color/black"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/img_seldon_logo"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_company_logo"
            android:scaleType="fitCenter"

            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            />

        <TextView
            android:id="@+id/txt_25thCo_presents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_seldon_logo"
            android:layout_toRightOf="@id/img_seldon_logo"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:height="100dp"
            android:text="@string/the25thCompany_presents_heading"
            />

        <TextView
            android:id="@+id/txt_seldon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_25thCo_presents"
            android:layout_toEndOf="@id/img_seldon_logo"
            android:layout_toRightOf="@id/img_seldon_logo"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:text="@string/seldon_heading_comma"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/txt_seldon"
            android:layout_toRightOf="@+id/img_seldon_logo"
            android:layout_toEndOf="@+id/img_seldon_logo"
            android:textColor="@android:color/white"
            android:text="@string/fragment_intro_txt_body"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
             />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="0.4"
        android:layout_height="0dp">

        <Button
            android:id="@+id/fragment_intro_btn_begin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/fragment_intro_btn_begin_title"
            android:gravity="center_vertical"
            android:padding="0dp"
            android:paddingLeft="125dp"
            android:paddingStart="125dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:alpha="1.0"
            android:textStyle="bold"

            style="@style/Base.Widget.AppCompat.Button.Borderless"
            />
    </RelativeLayout>

</LinearLayout>
